gcc/testsuite/gdc.test/fail_compilation/diag10792.d
/*
TEST_OUTPUT:
---
fail_compilation/diag10792.d(9): Error: semicolon expected following auto declaration, not `EOF`
---
*/

enum isPred(T) = asdf
